# LlamadoEnfermeriaP4

./: .gitignore  CMakeLists.txt  README.md  check_ai_images.py  check_images.py  convert_generated_images.py  convert_images.py  convert_plantilla_auto.py  img_cnv.py  img_to_c.py  partitions.csv  prepend_headers.py  sdkconfig  sdkconfig 2.old  sdkconfig.defaults
Imagenes/: LlamadoEnfermeria.sll  LlamadoEnfermeria.slp  LlamadoEnfermeria.spj  LlamadoEnfermeria_events.py  project.info
Imagenes/assets/fonts/: ui_font_Montserrat160.fcfg
SQ/SquareLine_Project/: .cproject  .project  CMakeLists.txt  README.md  build-wincross.sh  build.bat  build.sh  lv_conf.h  main.c  pc_simulator.launch  run-wincross.sh  run.bat  run.sh
SQ/SquareLine_Project/alteix-sans-font/: info.txt
components/: ui_comp_hook.c
components/esp_lcd_touch_gsl3680/: esp_lcd_touch_gsl3680.c  gsl_point_id.c
main/: Aplicacion.c  Aplicacion.h  CMakeLists.txt  idf_component.yml  main.c
main/drivers/: codec.c  codec.h  display.c  display.h  esp_lcd_touch_gt911.c  esp_lcd_touch_gt911.h  fast_task.c  fast_task.h  rtc.c  rtc.h  sd_card.c  sd_card.h  touch.c  touch.h
main/network/: ntp.c  ntp.h  wifi.c  wifi.h
main/ui/: espera_img.c  plantilla_img.c  psram_images.c  psram_images.h  ui 2.c  ui 2.h  ui.c  ui.h  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_events.c  ui_events.h  ui_font_Montserrat160.c  ui_helpers.h  ui_img_b_configuracion_png.c  ui_img_b_historial_png.c  ui_img_b_llamado_png.c  ui_img_botongrandeerror_png.c  ui_img_botongrandeok_png.c  ui_img_gear_8248448_png.c  ui_manual_helpers.c  ui_manual_helpers.h  ui_old.c_bak  ui_old.h_bak
screen_test/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
screen_test/main/: CMakeLists.txt  idf_component.yml  main.c
(+38 files in other folders)
